# robotic-arm-5-digit-manipulator

./: .gitattributes  .gitignore  Arm Build Progress.markdown  LICENSE  M5-8OD-10mm.STEP  README.md  Robotic Arm Parts Print.3mf  T3M1C.stl
Aero Hand Open mAI/: RELEASE_NOTES.md
Aero Hand Open mAI/firmware/main/: Homing.cpp
Aero Hand Open mAI/ros2/: .gitrepo
Aero Hand Open mAI/ros2/src/aero_hand_open_retargeting/: package.xml
Aero Hand Open mAI/ros2/src/aero_hand_open_retargeting/aero_hand_open_retargeting/: mediapipe_retargeting.py
Aero Hand Open mAI/ros2/src/aero_hand_open_retargeting/launch/: manus_teleop.launch.py
Aero Hand Open mAI/ros2/src/manus_glove_pkg/manus_ros2/: .gitignore  CMakeLists.txt  package.xml
Aero Hand Open mAI/ros2/src/manus_glove_pkg/manus_ros2/src/: ManusDataPublisher.cpp
Aero Hand Open mAI/sdk/: LICENSE  README.md  pyproject.toml
Aero Hand Open mAI/sdk/examples/: joint_control.py  power_grasp.py
BCN3D MOVEO - A fully OpenSource 3D printed Robot Arm - 1693444 - part 2 of 2/: LICENSE.txt
BCN3D MOVEO - A fully OpenSource 3D printed Robot Arm - 1693444 - part 2 of 2/files/: 3M2.STL  4M1.STL  4M2.STL  Box.3mf  Box.STL  Fan_Module.STL  Gripper_Left.STL  Tapa_4M1.STL  Tapa_TBB.STL
Code/Mac GUI/: esp_diag.py  launch_simple_controller.sh  manual_joint_controller_node.py  moveo_joint_controller.py  moveo_publisher.py  moveo_simple_controller.py
Code/basic_functions_test/: basic_functions_test.ino
Code/connection_to_rpi_test/: connection_to_rpi_test.ino
Code/esp32s3_arm_controller/: esp32s3_arm_controller.ino
Vision/: 4M2 - Vision Mount and EE Adapter.step
Vision/calibration/: make_charuco.py  stereo_calib.yaml  stereo_io.py  view_stereo.py
Vision/pi/: README.md  approach_object.py  approach_servo.py  deploy_to_pi.sh  goto_object.py  hand_eye_calibrate.py  run_approach_object.sh  run_he.sh  run_stream.sh  start_vision.sh  stereo_camera_node.py  stereo_depth_node.py  stop_vision.sh
assets/footage/: V1-0004_Arm Build Progress00000000.mov
docs/: arm-build-progress.md  terminal_shortcuts.md
firmware/esp32s3-arm-controller/: esp32s3_arm_controller.ino  troubleshooting_micro_ros.md
firmware/esp32s3-arm-controller/esp32s3_arm_controller/: esp32s3_arm_controller.ino
firmware/legacy-tests/basic_functions_test/: basic_functions_test.ino
firmware/legacy-tests/connection_to_rpi_test/: connection_to_rpi_test.ino
firmware/legacy-tests/esp32s3_stage_test/: esp32s3_stage_test.ino
firmware/legacy-tests/moveo_serial_test/: moveo_serial_test.ino
gripper/aero-hand-open/: LICENSE.md
gripper/aero-hand-open/Aero Hand Open mAI/: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
gripper/aero-hand-open/Aero Hand Open mAI/ros2/src/aero_hand_open_description/: package.xml
gripper/aero-hand-open/Aero Hand Open mAI/ros2/src/aero_hand_open_description/meshes/: left_base_link.STL  left_middle_tip_link.STL  left_pinky_proximal_link.STL  left_ring_distal_link.STL  left_thumb_mcp_link.STL  right_index_tip_link.STL  right_pinky_middle_link.STL  right_pinky_tip_link.STL  right_ring_distal_link.STL  right_thumb_mcp_link.STL  right_thumb_proximal_link.STL  right_thumb_tip_link.STL
gripper/aero-hand-open/Aero Hand Open mAI/ros2/src/aero_hand_open_description/urdf/: aero_hand_open_left.urdf
gripper/aero-hand-open/Aero Hand Open mAI/ros2/src/apple_vision_pro_mocap/: package.xml
gripper/aero-hand-open/firmware/: .gitrepo  README.md
gripper/aero-hand-open/hardware/: .gitrepo  LICENSE  README.md
gripper/aero-hand-open/ros2/: INSTALL.md  README.md  requirements.txt
gripper/aero-hand-open/sdk/: .gitignore  .gitrepo
gripper/aero-hand-open/sim_rl/: README.md
hardware/cad/: 10 tooth T5 Pulley 15mm width.f3d  10 tooth T5 Pulley 15mm width.step  M8-104OD-20mm.STEP  T2M1BD.stl  T2M1BI.stl  T4M1E.stl
hardware/enclosure/: 17HS15-1684S-PG5 - Waist T5 Pulley.stl  Robotic Arm Platform - Bottom Plate.stl  Robotic Arm Platform - Bottom.stl  Robotic Arm Platform - Driver Door.stl  Robotic Arm Platform - Driver Rail.stl  Robotic Arm Platform - Rubber Inserts.stl  Robotic Arm Platform - Top.3mf  Robotic Arm Platform - Top.stl  Rubber Feet.stl
reference/bcn3d-moveo/: README.md
ros_nodes/: moveo_publisher.py
software/mac-gui/: Launch Moveo GUI.command  Launch Simple Controller.command  README.md  circle_test.py  flash_esp32_from_pi.sh  install_dependencies.sh  kinematics.py  launch_joint_controller.sh  manual_joint_controller_node.py  moveo_joint_controller.py  moveo_publisher.py  moveo_simple_controller.py  reconnect_esp.sh  requirements.txt  serial_test.py  setup_arduino_cli_on_pi.sh  setup_manual_controller_on_pi.sh  test_reconnect_after_kill.sh
software/pi/: README.md
software/pi/moveo_ws/src/moveo_description/: CMakeLists.txt  package.xml
software/pi/moveo_ws/src/moveo_description/config/: moveo_controllers.yaml
software/pi/moveo_ws/src/moveo_description/launch/: moveo_description.launch.py
software/pi/moveo_ws/src/moveo_description/meshes/: Gripper_Idol_Gear_col.stl  Gripper_Servo_Gear_col.stl  Link_1_col.stl  Link_2.stl  Link_2_col.stl  Link_3_col.stl  Link_4_col.stl  Link_5.stl  Link_5_col.stl  Pivot_Arm_Gripper_Idol_col.stl  Pivot_Arm_Gripper_Servo_col.stl  Tip_Gripper_Idol_col.stl  Tip_Gripper_Servo_col.stl  base_link_col.stl
software/pi/moveo_ws/src/moveo_description/urdf/: moveo_clean.urdf  moveo_clean_backup.urdf  moveo_clean_backup_2.urdf  moveo_clean_old.urdf
software/pi/moveo_ws/src/moveo_moveit_config/: CMakeLists.txt  package.xml
software/pi/moveo_ws/src/moveo_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveo.srdf
software/pi/moveo_ws/src/moveo_moveit_config/launch/: moveit.launch.py
software/pi/moveo_ws/src/moveo_serial_bridge/: package.xml  setup.cfg  setup.py
software/pi/moveo_ws/src/moveo_serial_bridge/moveo_serial_bridge/: serial_bridge.py
software/ros/: moveo_publisher.py  run_moveo_publisher.sh
software/vision/: New Vision Mount.step  Stereo Camera Mount.stl  mac_goto_object.py  mac_processor.py  mac_stereo_grabber.py
urdf/: moveo.urdf
(+278 files in other folders)
